[project]
name = "dex-statarb-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "hmmlearn>=0.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "ruptures>=1.1.9",
    "statsmodels>=0.14.4",
]
